# bayt-al-mal

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml  tests.yml
bayt_al_mal/: __init__.py  apps.py  urls.py
bayt_al_mal/users/: __init__.py  apps.py  serializers.py
bayt_al_mal/users/tests/: __init__.py  test_models.py
